# AstraNotes-Project

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: ci-linux.yml  ci-linux.yml.old  ci-macos.yml  ci-macos.yml.old  ci-windows.yml.old  release.yml
Docs/: ACTIONS_PERFORMED.md  ARCHITECTURE.md  ARCHITECTURE_PHASES_1-4.md  ASTRANOTES_PRD.md  BACKLOG.md  CLASS_RESPONSIBILITIES_AND_PLUGIN_INTEGRATION.md  CUSTOMER_ACCEPTANCE_AND_DOD.md  DESIGN_INDEX.md  DEVELOPMENT_CHECKPOINT.md  EXECUTION_EVIDENCE.md  IMPLEMENTATION_ROADMAP.md  INITIAL_REQUIREMENTS.md  PROJECT_STRUCTURE.md  REQUIREMENTS.md  REQUIREMENTS_UPDATED.md  SDLC_PHASE_MAPPING.md  SPRINTS_IMPLEMENTATION_PLAN.md  UML_STARTER_DIAGRAMS.md  USER_STORIES.md  VISUAL_REFERENCE.md
Docs/legacy/: VISUAL_REFERENCE.md
docs/: ACTIONS_PERFORMED.md  CLASS_RESPONSIBILITIES_AND_PLUGIN_INTEGRATION.md  DOCUMENTATION_STRUCTURE_PROPOSAL.md  FINAL_SUBMISSION_AUDIT.md  IMPLEMENTATION_ROADMAP.md  INITIAL_REQUIREMENTS_REVISED.md  PHASE_PROGRESS.md  PLUGIN_DLL_IMPLEMENTATION_PLAN.md  PROJECT_STRUCTURE.md  REQUIREMENT_TRACEABILITY_MATRIX.md  TEST_PLAN.md  TEST_VALIDATION_TRACEABILITY.md  TRACEABILITY_CHAIN.md
docs/architecture/: ARCHITECTURE.md  ARCHITECTURE_PHASES_1-4.md  CLASS_RESPONSIBILITIES_AND_PLUGIN_INTEGRATION.md  DESIGN_INDEX.md  PROJECT_STRUCTURE.md
docs/legacy/: ACTIONS_PERFORMED.md  DOCUMENTATION_STRUCTURE_PROPOSAL.md  DOCUMENTATION_STRUCTURE_PROPOSAL_old.md  FINAL_SUBMISSION_AUDIT.md  REQUIREMENTS.md  REQUIREMENTS_UPDATED.md  UML_STARTER_DIAGRAMS.md
docs/operations/: OPERATIONS_NOTES.md
docs/planning/: DEVELOPMENT_CHECKPOINT.md  IMPLEMENTATION_ROADMAP.md  PHASE_PROGRESS.md  PLUGIN_DLL_IMPLEMENTATION_PLAN.md  QUICK_REFERENCE_PHASES_1-4.md  RELEASE_GATES.md  SDLC_PHASE_MAPPING.md  SPRINTS_IMPLEMENTATION_PLAN.md  SPRINT_ZERO_PLAN.md  UI_PLUGIN_IMPLEMENTATION_PLAN.md
docs/requirements/: ASTRANOTES_PRD.md  CUSTOMER_ACCEPTANCE_AND_DOD.md  INITIAL_REQUIREMENTS_REVISED.md  USER_STORIES.md
docs/validation/: AI_HUMAN_OVERSIGHT.md  PHASES_1-4_IMPLEMENTATION_COMPLETE.md  REQUIREMENT_TRACEABILITY_MATRIX.md  TEST_PLAN.md  TEST_VALIDATION_TRACEABILITY.md  TRACEABILITY_CHAIN.md
docs1/: ARCHITECTURE.md  DESIGN_INDEX.md  PHASES_1-4_IMPLEMENTATION_COMPLETE.md  QUICK_REFERENCE_PHASES_1-4.md  RELEASE_GATES.md  SPRINT_ZERO_PLAN.md  UI_PLUGIN_IMPLEMENTATION_PLAN.md
include/: Note.h
scripts/: run-all-tests.ps1  run-smoke-tests.ps1
src/: Note.cpp  main.cpp
src/api/: INote.h  IPlugin.h  ISnapshot.h
src/app/: main.cpp
src/compat/: msvc_qt_compat.h
src/crypto/: EncryptionService.cpp  EncryptionService.h  README.md
src/logging/: AuditLogger.cpp  AuditLogger.h  README.md
src/model/: Note.cpp  Note.h  README.md  Snapshot.cpp  Snapshot.h
src/plugins/: IFormattingAction.h  IPlugin.cpp  IPlugin.h  MarkdownFormattingPlugin.h  MarkdownPlugin.cpp  MarkdownPlugin.h  PlaintextPlugin.cpp  PlaintextPlugin.h  PluginManager.cpp  PluginManager.h  README.md
src/repository/: INoteRepository.h  README.md  SqliteNoteRepository.cpp  SqliteNoteRepository.h
src/service/: EncryptionService.cpp  INoteService.h  ISnapshotService.h  ITrashService.h  NoteService.cpp  NoteService.h  README.md  SnapshotService.cpp  SnapshotService.h  TrashService.cpp  TrashService.h
src/service/impl/: NoteService.cpp  NoteService.h  README.md  SnapshotService.cpp  SnapshotService.h  TrashService.cpp  TrashService.h
src/service/interfaces/: INoteService.h  ISnapshotService.h  ITrashService.h  README.md
src/ui/: AuditLogPanel.cpp  AuditLogPanel.h  NoteListController.cpp  NoteListController.h  README.md  SettingsDialog.cpp  SettingsDialog.h  TrashDialog.cpp  TrashDialog.h  mainwindow.cpp  mainwindow.h  mainwindow.ui
tests/: CMakeLists.txt  TESTS.md
tests/integration/: repository_roundtrip_integration_tests.cpp
tests/performance/: nfr_performance_tests.cpp
tests/smoke/: SmokeTest.cpp  mainwindow_quick_tests.cpp  trash_feature_smoke.cpp
tests/unit/: concurrency_tests.cpp  encryption_failure_tests.cpp  note_deletion_lifecycle_tests.cpp  note_service_password_unit_tests.cpp  note_service_trash_unit_tests.cpp  note_trash_integration_tests.cpp  repository_failure_tests.cpp  search_edgecases_tests.cpp  snapshot_service_tests.cpp  trash_service_tests.cpp
ui/: mainwindow.ui
